# chatswitch.10k.kz

./: .env.example  .gitignore  .phpunit.result.cache  README.md  VOICE_TRANSCRIPTION_ARCHITECTURE.md  VOICE_TRANSCRIPTION_IMPROVEMENTS.md  backup-chatswitch-20260514-063017.sql  backup-chatswitch-20260514-075702.sql  composer.json  package-lock.json  package.json  phpunit.xml  storage  tailwind.config.js  tsconfig.json  vite.config.js  vitest.config.ts
.cursor/: hooks.json
bootstrap/: app.php  cache
config/: accel.php  ai.php  ai_calculator.php  app.php  billing.php  changelog.php  chatswitch.php  cors.php  docs.php  entity-memory.php  funnel.php  horizon.php  knowledge.php  landing.php  locale_assistant.php  permission.php  recaptcha.php  reverb.php  sanctum.php  services.php  tenancy.php  tenant_permissions.php  whatsapp.php
docs/: AI_ASSISTANT.md  AI_UI_UX_IMPROVEMENT_PLAN.md  ARCHITECTURE.md  FUNNEL.md  FUNNEL_BOARD_ROADMAP.md  IMPLEMENTATION_SUMMARY_2026_05_12.md  SECURITY_AND_OPTIMIZATIONS.md  TASKS.md  TEAM_CHAT_ROADMAP.md  UI-CHECKLIST.md  UX-UI-ROADMAP-AUDIT.md  WHATSAPP_MULTI_NUMBER_AND_IP.md  ai-sales-agent-remediation.md  chat-system-practical-verification-system-messages.md  (+2 more)
mockup/: README.md
tools/kz-locale-ai/: README.md  pyproject.toml
tools/kz-locale-ai/kz_locale_ai/: __init__.py  cli.py
tools/kz-locale-ai/kz_locale_ai/detect/: detector.py
tools/kz-locale-ai/kz_locale_ai/eval/: metrics.py  runner.py
tools/kz-locale-ai/kz_locale_ai/pipeline/: dedupe.py  export_openai.py  ingest.py  normalize.py  safety.py  schema.py  split.py  validate.py
(+1582 files in other folders)
