[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kz-locale-ai"
version = "0.1.0"
description = "Dataset pipeline and evaluation for Kazakhstan multilingual assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.0",
]

[project.scripts]
kz-locale-ai = "kz_locale_ai.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["kz_locale_ai*"]
